basic logger element created with sample data

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Star Wars RPG</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Share+Tech+Mono" rel="stylesheet">
 </head>
 <body>
 
 
 
+    <div id="logger">
+        <div class="message">Welcome to star wars RPG</div>
+    </div>
+<!-- Scripts -->
 <script
     src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
