basic navbar added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 
-
+    <div class="control-bar">
+        <h3 class="logo">Star Wars RPG</h3>
+    </div>
 
     <div id="logger">
     </div>
