Skeleton of  sections and character selection screens created

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
 
     <div class="control-bar">
-        <h3 class="logo">Star Wars RPG</h3>
+        <h1 class="logo">Star Wars RPG</h1>
+    </div>
+
+    <div class="section character-selection">
+        <h3>Choose A Character</h3>
     </div>
 
     <div id="logger">
