--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
     <div class="section character-selection">
         <h3>Choose A Character</h3>
+        <div class="character-wrapper">
+            <div class="character-box"></div>
+            <div class="character-box"></div>
+            <div class="character-box"></div>
+            <div class="character-box"></div>
+            <div class="character-box"></div>
+        </div>
     </div>
 
     <div id="logger">
