more inline game flow

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="logo">Star Wars RPG</h1>
     </div>
 
-    <div class="section character-selection">
+    <div class="section character-selection" style="display: none;">
         <h3>Choose A Character</h3>
         <div class="character-wrapper">
             <div class="character-box"></div>
