start screen created

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <h1 class="logo">Star Wars RPG</h1>
     </div>
 
+    <div class="section start" style="display: none;">
+        <h3>Welcome to Star Wars RPG!</h3>
+        <h3>Press any key to begin!</h3>
+    </div>
+
     <div class="section character-selection" style="display: none;">
         <h3>Choose A Character</h3>
         <div class="character-wrapper">
