replacing css animations with animejs

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h1 class="logo">Star Wars RPG</h1>
     </div>
 
-    <div class="section start" style="display: none;">
-        <h3>Welcome to Star Wars RPG!</h3>
+    <div class="section start" style="opacity: 0;">
+            <h3>Welcome to Star Wars RPG!</h3>
         <h3>Press any key to begin!</h3>
     </div>
 
-    <div class="section character-selection" style="display: none;">
+    <div class="section character-selection" style="opacity: 0;">
         <h3>Choose A Character</h3>
         <div class="character-wrapper">
             <div class="character-box"></div>
@@ -31,15 +31,18 @@
         </div>
     </div>
 
-    <div id="logger">
-    </div>
-<!-- Scripts -->
-<script
-    src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-    crossorigin="anonymous"></script>
-<script 
-    src="assets/javascript/game.js"></script>
+    <div id="logger"> </div>
+
+    <!-- Scripts -->
+    <script
+        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+        crossorigin="anonymous"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+
+    <script 
+        src="assets/javascript/game.js"></script>
 
 </body>
 </html>
