Simple rendering of character boxes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="section character-selection" style="opacity: 0;">
-        <h3>Choose A Character</h3>
+        <h3>Choose a Character</h3>
         <div class="character-wrapper">
             <div class="character-box"></div>
             <div class="character-box"></div>
