--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
 
     <div class="section character-selection" style="opacity: 0;">
         <h3>Choose a Character</h3>
-        <div class="character-wrapper">
-            <div class="character-box"></div>
-            <div class="character-box"></div>
-            <div class="character-box"></div>
-            <div class="character-box"></div>
-            <div class="character-box"></div>
-        </div>
+        <div class="character-wrapper"></div>
     </div>
 
     <div id="logger"> </div>
