Scaffolded enemy selection screen

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
         <h1 class="logo">Star Wars RPG</h1>
     </div>
 
-    <div class="section start" style="opacity: 0;">
+    <div class="section start">
             <h3>Welcome to Star Wars RPG!</h3>
         <h3>Press any key to begin!</h3>
     </div>
 
-    <div class="section character-selection" style="opacity: 0;">
+    <div class="section character-selection">
         <h3>Choose a Character</h3>
         <div class="character-wrapper"></div>
+    </div>
+
+    <div class="section enemy-selection" >
+        <h3>Choose an Oponent</h3>
+        <div class="enemy-wrapper"></div>
     </div>
 
     <div id="logger"> </div>
