Scaffolded combat screen

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <div class="enemy-wrapper"></div>
     </div>
 
+    <div class="section combat-section">
+        <h3>Fight!</h3>
+    </div>
+
     <div id="logger"> </div>
 
     <!-- Scripts -->
