added combat wrapper for the combat screen

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <div class="section combat-section">
         <h3>Fight!</h3>
+        <div class="combat-wrapper"></div>
     </div>
 
     <div id="logger"> </div>
